# PluginDFT

./: .appveyor.yml  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE  README.md  ____init_____8py.html  ____init_____8py.js  ____init_____8py_source.html  _func___depos_8cc.html  _func___depos_8cc_source.html  _func___h_c_8cc.html  _func___h_c_8cc_source.html  _func___implem_8cc.html  _func___implem_8cc_source.html  annotated.html  annotated_dup.js  classes.html  classpsi_1_1mydft_1_1_d_f_t_solver-members.html  classpsi_1_1mydft_1_1_d_f_t_solver.html  classpsi_1_1mydft_1_1_d_f_t_solver.js  classpsi_1_1mydft_1_1_d_i_i_s-members.html  classpsi_1_1mydft_1_1_d_i_i_s.html  classpsi_1_1mydft_1_1_d_i_i_s.js  configure  dft_8cc.html  dft_8cc_source.html  dft_8h.html  dft_8h_source.html  diis_8cc.html  diis_8cc_source.html  diis_8h.html  diis_8h_source.html  dir_198486377328dde0ab303b23d83121ec.html  dir_198486377328dde0ab303b23d83121ec.js  dir_204f8af06dc3bea3e75cefb7935561bc.html  dir_204f8af06dc3bea3e75cefb7935561bc.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_9ed5f75ef020620f291fa00b194fc1e7.html  (+28 more)
doc/: Doxyfile
docs/: Doxyfile
docs/html/: ____init_____8py.html  ____init_____8py_source.html  _func___depos_8cc.html  _func___depos_8cc_source.html  _func___h_c_8cc.html  _func___h_c_8cc_source.html  _func___implem_8cc.html  _func___implem_8cc_source.html  annotated.html  classes.html  classpsi_1_1mydft_1_1_d_f_t_solver-members.html  classpsi_1_1mydft_1_1_d_f_t_solver.html  classpsi_1_1mydft_1_1_d_f_t_solver__inherit__graph.dot  classpsi_1_1mydft_1_1_d_i_i_s-members.html  classpsi_1_1mydft_1_1_d_i_i_s.html  dft_8cc.html  dft_8cc_source.html  dft_8h.html  dft_8h_source.html  diis_8cc.html  diis_8cc_source.html  diis_8h.html  diis_8h_source.html  dir_198486377328dde0ab303b23d83121ec.html  dir_204f8af06dc3bea3e75cefb7935561bc.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_9ed5f75ef020620f291fa00b194fc1e7.html  doxygen.css  files.html  functions.html  functions_func.html  functions_vars.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.dot  inherit_graph_1.dot  inherits.html  menudata.js  namespacemembers.html  (+11 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  files_0.js  files_1.js  files_2.js  files_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  namespaces_0.js  namespaces_1.js  pages_0.js  search.css  searchdata.js  variables_0.js  (+10 more)
docs/latex/: ____init_____8py.tex  _func___depos_8cc.tex  _func___h_c_8cc.tex  _func___implem_8cc.tex  annotated.tex  classpsi_1_1mydft_1_1_d_f_t_solver.eps  classpsi_1_1mydft_1_1_d_f_t_solver.tex  classpsi_1_1mydft_1_1_d_i_i_s.tex  dft_8cc.tex  dft_8h.tex  diis_8cc.tex  diis_8h.tex  dir_198486377328dde0ab303b23d83121ec.tex  dir_204f8af06dc3bea3e75cefb7935561bc.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_9ed5f75ef020620f291fa00b194fc1e7.tex  files.tex  hierarchy.tex  index.tex  namespacepsi.tex  namespacepsi_1_1mydft.tex  namespaces.tex  namespacesrc.tex  namespacesrc_1_1pymodule.tex  plugin_8cc.tex  pymodule_8py.tex  refman.tex
search/: all_1.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  files_1.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  namespaces_0.js  namespaces_1.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_4.js  variables_5.js  variables_6.js  variables_7.js  variables_a.js
src/: CMakeLists.txt  Func_HC.cc  dft.cc  dft.h  plugin.cc  pymodule.py
src/dft/: CMakeLists.txt  dft.h
src/diis/: CMakeLists.txt
src/functionals/: CMakeLists.txt  Func_Depos.cc  Func_Implem.cc
